--- a/src/main/resources/example.properties
+++ b/src/main/resources/example.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/dogs_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/spring_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=roger
 spring.datasource.password=042110r
 spring.jpa.hibernate.ddl-auto=update
