--- a/src/main/resources/example.properties
+++ b/src/main/resources/example.properties
@@ -1,5 +1,14 @@
 spring.datasource.url=jdbc:mysql://localhost/spring_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=roger
-spring.datasource.password=042110r
+spring.datasource.username=username
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=username
+spring.mail.password=password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.from=admin@example.com
